@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c: Change weapon improving code to only use up the number of
+    potions that it needs, and not all on the ground.  Required adding
+    another arg to eat_item() which is the number of items to consume.
+include/sproto.h: Rebuilt for new eat_item() (actually, a static, so no
+    longer shows up in this file)
 server/attack.c: Change did_make_save to strip out magic attacktype when making
     saves for objects - otherwise, things like poison cloud destroy objects.
 server/time.c: deal with player animations special in process_object - need to
